parser/mysqlcreatetable_parser.go
// Code generated from MySQLCreateTable.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // MySQLCreateTable

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type MySQLCreateTableParser struct {
	*antlr.BaseParser
}

var MySQLCreateTableParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func mysqlcreatetableParserInit() {
	staticData := &MySQLCreateTableParserStaticData
	staticData.LiteralNames = []string{
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "", "", "", "", "','", "'('", "')'", "';'", "'.'",
	}
	staticData.SymbolicNames = []string{
		"", "CREATE", "TEMPORARY", "TABLE", "IF", "NOT", "EXISTS", "PRIMARY",
		"KEY", "FOREIGN", "REFERENCES", "INDEX", "UNIQUE", "CONSTRAINT", "CHECK",
		"DEFAULT", "AUTO_INCREMENT", "ENGINE", "CHARSET", "COLLATE", "COMMENT",
		"NULL", "CURRENT_TIMESTAMP", "ON", "UPDATE", "CHARACTER", "SET", "USING",
		"JSON", "AND", "OR", "INT", "BIGINT", "TINYINT", "VARCHAR", "CHAR",
		"DECIMAL", "DATETIME", "DATE", "TIMESTAMP", "TEXT", "UNSIGNED", "OPERATOR",
		"COMMA", "LPAREN", "RPAREN", "SEMI", "DOT", "DELETE", "RESTRICT", "CASCADE",
		"NO", "ACTION", "IDENTIFIER", "STRING_LITERAL", "NUMERIC_LITERAL", "WS",
		"LINE_COMMENT", "BLOCK_COMMENT",
	}
	staticData.RuleNames = []string{
		"create_table_stmt", "table_element", "column_def", "data_type", "table_constraint",
		"action", "table_option", "table_name", "column_name", "column_list",
		"engine_name", "charset_name", "collation_name", "literal", "identifier",
		"index_type", "expr", "logical_expr", "comparison_expr", "primary_expr",
		"function_call",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// MySQLCreateTableParserInit initializes any static state used to implement MySQLCreateTableParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewMySQLCreateTableParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func MySQLCreateTableParserInit() {
	staticData := &MySQLCreateTableParserStaticData
	staticData.once.Do(mysqlcreatetableParserInit)
}

// NewMySQLCreateTableParser produces a new parser instance for the optional input antlr.TokenStream.
func NewMySQLCreateTableParser(input antlr.TokenStream) *MySQLCreateTableParser {
	MySQLCreateTableParserInit()
	this := new(MySQLCreateTableParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &MySQLCreateTableParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "MySQLCreateTable.g4"

	return this
}

// MySQLCreateTableParser tokens.
const (
	MySQLCreateTableParserEOF               = antlr.TokenEOF
	MySQLCreateTableParserCREATE            = 1
	MySQLCreateTableParserTEMPORARY         = 2
	MySQLCreateTableParserTABLE             = 3
	MySQLCreateTableParserIF                = 4
	MySQLCreateTableParserNOT               = 5
	MySQLCreateTableParserEXISTS            = 6
	MySQLCreateTableParserPRIMARY           = 7
	MySQLCreateTableParserKEY               = 8
	MySQLCreateTableParserFOREIGN           = 9
	MySQLCreateTableParserREFERENCES        = 10
	MySQLCreateTableParserINDEX             = 11
	MySQLCreateTableParserUNIQUE            = 12
	MySQLCreateTableParserCONSTRAINT        = 13
	MySQLCreateTableParserCHECK             = 14
	MySQLCreateTableParserDEFAULT           = 15
	MySQLCreateTableParserAUTO_INCREMENT    = 16
	MySQLCreateTableParserENGINE            = 17
	MySQLCreateTableParserCHARSET           = 18
	MySQLCreateTableParserCOLLATE           = 19
	MySQLCreateTableParserCOMMENT           = 20
	MySQLCreateTableParserNULL              = 21
	MySQLCreateTableParserCURRENT_TIMESTAMP = 22
	MySQLCreateTableParserON                = 23
	MySQLCreateTableParserUPDATE            = 24
	MySQLCreateTableParserCHARACTER         = 25
	MySQLCreateTableParserSET               = 26
	MySQLCreateTableParserUSING             = 27
	MySQLCreateTableParserJSON              = 28
	MySQLCreateTableParserAND               = 29
	MySQLCreateTableParserOR                = 30
	MySQLCreateTableParserINT               = 31
	MySQLCreateTableParserBIGINT            = 32
	MySQLCreateTableParserTINYINT           = 33
	MySQLCreateTableParserVARCHAR           = 34
	MySQLCreateTableParserCHAR              = 35
	MySQLCreateTableParserDECIMAL           = 36
	MySQLCreateTableParserDATETIME          = 37
	MySQLCreateTableParserDATE              = 38
	MySQLCreateTableParserTIMESTAMP         = 39
	MySQLCreateTableParserTEXT              = 40
	MySQLCreateTableParserUNSIGNED          = 41
	MySQLCreateTableParserOPERATOR          = 42
	MySQLCreateTableParserCOMMA             = 43
	MySQLCreateTableParserLPAREN            = 44
	MySQLCreateTableParserRPAREN            = 45
	MySQLCreateTableParserSEMI              = 46
	MySQLCreateTableParserDOT               = 47
	MySQLCreateTableParserDELETE            = 48
	MySQLCreateTableParserRESTRICT          = 49
	MySQLCreateTableParserCASCADE           = 50
	MySQLCreateTableParserNO                = 51
	MySQLCreateTableParserACTION            = 52
	MySQLCreateTableParserIDENTIFIER        = 53
	MySQLCreateTableParserSTRING_LITERAL    = 54
	MySQLCreateTableParserNUMERIC_LITERAL   = 55
	MySQLCreateTableParserWS                = 56
	MySQLCreateTableParserLINE_COMMENT      = 57
	MySQLCreateTableParserBLOCK_COMMENT     = 58
)

// MySQLCreateTableParser rules.
const (
	MySQLCreateTableParserRULE_create_table_stmt = 0
	MySQLCreateTableParserRULE_table_element     = 1
	MySQLCreateTableParserRULE_column_def        = 2
	MySQLCreateTableParserRULE_data_type         = 3
	MySQLCreateTableParserRULE_table_constraint  = 4
	MySQLCreateTableParserRULE_action            = 5
	MySQLCreateTableParserRULE_table_option      = 6
	MySQLCreateTableParserRULE_table_name        = 7
	MySQLCreateTableParserRULE_column_name       = 8
	MySQLCreateTableParserRULE_column_list       = 9
	MySQLCreateTableParserRULE_engine_name       = 10
	MySQLCreateTableParserRULE_charset_name      = 11
	MySQLCreateTableParserRULE_collation_name    = 12
	MySQLCreateTableParserRULE_literal           = 13
	MySQLCreateTableParserRULE_identifier        = 14
	MySQLCreateTableParserRULE_index_type        = 15
	MySQLCreateTableParserRULE_expr              = 16
	MySQLCreateTableParserRULE_logical_expr      = 17
	MySQLCreateTableParserRULE_comparison_expr   = 18
	MySQLCreateTableParserRULE_primary_expr      = 19
	MySQLCreateTableParserRULE_function_call     = 20
)

// ICreate_table_stmtContext is an interface to support dynamic dispatch.
type ICreate_table_stmtContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	CREATE() antlr.TerminalNode
	TABLE() antlr.TerminalNode
	Table_name() ITable_nameContext
	LPAREN() antlr.TerminalNode
	AllTable_element() []ITable_elementContext
	Table_element(i int) ITable_elementContext
	RPAREN() antlr.TerminalNode
	TEMPORARY() antlr.TerminalNode
	IF() antlr.TerminalNode
	NOT() antlr.TerminalNode
	EXISTS() antlr.TerminalNode
	AllCOMMA() []antlr.TerminalNode
	COMMA(i int) antlr.TerminalNode
	AllTable_option() []ITable_optionContext
	Table_option(i int) ITable_optionContext
	SEMI() antlr.TerminalNode

	// IsCreate_table_stmtContext differentiates from other interfaces.
	IsCreate_table_stmtContext()
}

type Create_table_stmtContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCreate_table_stmtContext() *Create_table_stmtContext {
	var p = new(Create_table_stmtContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MySQLCreateTableParserRULE_create_table_stmt
	return p
}

func InitEmptyCreate_table_stmtContext(p *Create_table_stmtContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MySQLCreateTableParserRULE_create_table_stmt
}

func (*Create_table_stmtContext) IsCreate_table_stmtContext() {}

func NewCreate_table_stmtContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Create_table_stmtContext {
	var p = new(Create_table_stmtContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = MySQLCreateTableParserRULE_create_table_stmt

	return p
}

func (s *Create_table_stmtContext) GetParser() antlr.Parser { return s.parser }

func (s *Create_table_stmtContext) CREATE() antlr.TerminalNode {
	return s.GetToken(MySQLCreateTableParserCREATE, 0)
}

func (s *Create_table_stmtContext) TABLE() antlr.TerminalNode {
	return s.GetToken(MySQLCreateTableParserTABLE, 0)
}

func (s *Create_table_stmtContext) Table_name() ITable_nameContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITable_nameContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITable_nameContext)
}

func (s *Create_table_stmtContext) LPAREN() antlr.TerminalNode {
	return s.GetToken(MySQLCreateTableParserLPAREN, 0)
}

func (s *Create_table_stmtContext) AllTable_element() []ITable_elementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ITable_elementContext); ok {
			len++
		}
	}

	tst := make([]ITable_elementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ITable_elementContext); ok {
			tst[i] = t.(ITable_elementContext)
			i++
		}
	}

	return tst
}

func (s *Create_table_stmtContext) Table_element(i int) ITable_elementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITable_elementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITable_elementContext)
}

func (s *Create_table_stmtContext) RPAREN() antlr.TerminalNode {
	return s.GetToken(MySQLCreateTableParserRPAREN, 0)
}

func (s *Create_table_stmtContext) TEMPORARY() antlr.TerminalNode {
	return s.GetToken(MySQLCreateTableParserTEMPORARY, 0)
}

func (s *Create_table_stmtContext) IF() antlr.TerminalNode {
	return s.GetToken(MySQLCreateTableParserIF, 0)
}

func (s *Create_table_stmtContext) NOT() antlr.TerminalNode {
	return s.GetToken(MySQLCreateTableParserNOT, 0)
}

func (s *Create_table_stmtContext) EXISTS() antlr.TerminalNode {
	return s.GetToken(MySQLCreateTableParserEXISTS, 0)
}

func (s *Create_table_stmtContext) AllCOMMA() []antlr.TerminalNode {
	return s.GetTokens(MySQLCreateTableParserCOMMA)
}

func (s *Create_table_stmtContext) COMMA(i int) antlr.TerminalNode {
	return s.GetToken(MySQLCreateTableParserCOMMA, i)
}

func (s *Create_table_stmtContext) AllTable_option() []ITable_optionContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ITable_optionContext); ok {
			len++
		}
	}

	tst := make([]ITable_optionContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ITable_optionContext); ok {
			tst[i] = t.(ITable_optionContext)
			i++
		}
	}

	return tst
}

func (s *Create_table_stmtContext) Table_option(i int) ITable_optionContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITable_optionContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITable_optionContext)
}

func (s *Create_table_stmtContext) SEMI() antlr.TerminalNode {
	return s.GetToken(MySQLCreateTableParserSEMI, 0)
}

func (s *Create_table_stmtContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Create_table_stmtContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Create_table_stmtContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MySQLCreateTableListener); ok {
		listenerT.EnterCreate_table_stmt(s)
	}
}

func (s *Create_table_stmtContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MySQLCreateTableListener); ok {
		listenerT.ExitCreate_table_stmt(s)
	}
}

func (p *MySQLCreateTableParser) Create_table_stmt() (localctx ICreate_table_stmtContext) {
	localctx = NewCreate_table_stmtContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, MySQLCreateTableParserRULE_create_table_stmt)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(42)
		p.Match(MySQLCreateTableParserCREATE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(44)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == MySQLCreateTableParserTEMPORARY {
		{
			p.SetState(43)
			p.Match(MySQLCreateTableParserTEMPORARY)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	}
	{
		p.SetState(46)
		p.Match(MySQLCreateTableParserTABLE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(50)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == MySQLCreateTableParserIF {
		{
			p.SetState(47)
			p.Match(MySQLCreateTableParserIF)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(48)
			p.Match(MySQLCreateTableParserNOT)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(49)
			p.Match(MySQLCreateTableParserEXISTS)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	}
	{
		p.SetState(52)
		p.Table_name()
	}
	{
		p.SetState(53)
		p.Match(MySQLCreateTableParserLPAREN)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(54)
		p.Table_element()
	}
	p.SetState(59)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == MySQLCreateTableParserCOMMA {
		{
			p.SetState(55)
			p.Match(MySQLCreateTableParserCOMMA)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(56)
			p.Table_element()
		}

		p.SetState(61)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(62)
		p.Match(MySQLCreateTableParserRPAREN)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(66)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&35618816) != 0 {
		{
			p.SetState(63)
			p.Table_option()
		}

		p.SetState(68)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	p.SetState(70)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == MySQLCreateTableParserSEMI {
		{
			p.SetState(69)
			p.Match(MySQLCreateTableParserSEMI)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ITable_elementContext is an interface to support dynamic dispatch.
type ITable_elementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Column_def() IColumn_defContext
	Table_constraint() ITable_constraintContext

	// IsTable_elementContext differentiates from other interfaces.
	IsTable_elementContext()
}

type Table_elementContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTable_elementContext() *Table_elementContext {
	var p = new(Table_elementContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MySQLCreateTableParserRULE_table_element
	return p
}

func InitEmptyTable_elementContext(p *Table_elementContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MySQLCreateTableParserRULE_table_element
}

func (*Table_elementContext) IsTable_elementContext() {}

func NewTable_elementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Table_elementContext {
	var p = new(Table_elementContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = MySQLCreateTableParserRULE_table_element

	return p
}

func (s *Table_elementContext) GetParser() antlr.Parser { return s.parser }

func (s *Table_elementContext) Column_def() IColumn_defContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IColumn_defContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IColumn_defContext)
}

func (s *Table_elementContext) Table_constraint() ITable_constraintContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITable_constraintContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITable_constraintContext)
}

func (s *Table_elementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Table_elementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Table_elementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MySQLCreateTableListener); ok {
		listenerT.EnterTable_element(s)
	}
}

func (s *Table_elementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MySQLCreateTableListener); ok {
		listenerT.ExitTable_element(s)
	}
}

func (p *MySQLCreateTableParser) Table_element() (localctx ITable_elementContext) {
	localctx = NewTable_elementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, MySQLCreateTableParserRULE_table_element)
	p.SetState(74)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case MySQLCreateTableParserIDENTIFIER:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(72)
			p.Column_def()
		}

	case MySQLCreateTableParserPRIMARY, MySQLCreateTableParserKEY, MySQLCreateTableParserFOREIGN, MySQLCreateTableParserINDEX, MySQLCreateTableParserUNIQUE, MySQLCreateTableParserCONSTRAINT, MySQLCreateTableParserCHECK:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(73)
			p.Table_constraint()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IColumn_defContext is an interface to support dynamic dispatch.
type IColumn_defContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllColumn_name() []IColumn_nameContext
	Column_name(i int) IColumn_nameContext
	Data_type() IData_typeContext
	NOT() antlr.TerminalNode
	NULL() antlr.TerminalNode
	DEFAULT() antlr.TerminalNode
	AUTO_INCREMENT() antlr.TerminalNode
	PRIMARY() antlr.TerminalNode
	KEY() antlr.TerminalNode
	UNIQUE() antlr.TerminalNode
	COMMENT() antlr.TerminalNode
	STRING_LITERAL() antlr.TerminalNode
	CHARACTER() antlr.TerminalNode
	SET() antlr.TerminalNode
	Charset_name() ICharset_nameContext
	COLLATE() antlr.TerminalNode
	Collation_name() ICollation_nameContext
	REFERENCES() antlr.TerminalNode
	Table_name() ITable_nameContext
	AllLPAREN() []antlr.TerminalNode
	LPAREN(i int) antlr.TerminalNode
	AllRPAREN() []antlr.TerminalNode
	RPAREN(i int) antlr.TerminalNode
	CHECK() antlr.TerminalNode
	Expr() IExprContext
	Literal() ILiteralContext
	AllCURRENT_TIMESTAMP() []antlr.TerminalNode
	CURRENT_TIMESTAMP(i int) antlr.TerminalNode
	AllON() []antlr.TerminalNode
	ON(i int) antlr.TerminalNode
	AllAction_() []IActionContext
	Action_(i int) IActionContext
	AllDELETE() []antlr.TerminalNode
	DELETE(i int) antlr.TerminalNode
	AllUPDATE() []antlr.TerminalNode
	UPDATE(i int) antlr.TerminalNode

	// IsColumn_defContext differentiates from other interfaces.
	IsColumn_defContext()
}

type Column_defContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyColumn_defContext() *Column_defContext {
	var p = new(Column_defContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MySQLCreateTableParserRULE_column_def
	return p
}

func InitEmptyColumn_defContext(p *Column_defContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MySQLCreateTableParserRULE_column_def
}

func (*Column_defContext) IsColumn_defContext() {}

func NewColumn_defContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Column_defContext {
	var p = new(Column_defContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = MySQLCreateTableParserRULE_column_def

	return p
}

func (s *Column_defContext) GetParser() antlr.Parser { return s.parser }

func (s *Column_defContext) AllColumn_name() []IColumn_nameContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IColumn_nameContext); ok {
			len++
		}
	}

	tst := make([]IColumn_nameContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IColumn_nameContext); ok {
			tst[i] = t.(IColumn_nameContext)
			i++
		}
	}

	return tst
}

func (s *Column_defContext) Column_name(i int) IColumn_nameContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IColumn_nameContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}
